style: Fix arrows alignment of Tabs in single trip page for default themes

--- a/app/src/sass/elements/_globalcss.scss
+++ b/app/src/sass/elements/_globalcss.scss
@@ -33,7 +33,6 @@
 			// border: 1px solid;
 			border-radius: 0px;
 			transition: 0.2s 0.1s;
-			top: 0;
 			left: 0;
 			border: 1px solid #ebebeb;
 			border-right: none;
